manifests/prototype/_test-cert-nginx/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.bauer.mt`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      # middlewares:
      #   - name: default-headers
  # tls:
  #   secretName: k3s-bauer-mt-tls
  # Omit secretName to use the default certificate
